add prev steps fix lol

--- a/css/addCar.css
+++ b/css/addCar.css
@@ -778,6 +778,11 @@ input::-webkit-inner-spin-button {
 
 
 @media screen and (max-width: 767px) {
+
+    .prevStep {
+        width: 204px;
+    }
+
     #newCarMainBlock {
         width: 312px;
     }
