--- a/css/all.css
+++ b/css/all.css
@@ -1188,8 +1188,8 @@ h3 {
 
     font-style: normal;
     font-weight: normal;
-    font-size: 10px;
-    line-height: 13px;
+    font-size: 12px;
+    line-height: 14px;
     /* or 130% */
 
     letter-spacing: 0.03em;
@@ -1338,11 +1338,12 @@ h3 {
 
     color: #6E7191;
     transition: .2s;
+    cursor: pointer;
 }
 
 #enterBackSubmitForget:hover {
 
-    color: #4E4B66;
+    color: #2997EE;
     transition: .2s;
 }
 
@@ -2384,6 +2385,18 @@ h3 {
 
     #footer {
         width: 728px;
+    }
+
+    #footer a {
+        text-decoration: none;
+        cursor: pointer;
+        color: #7993AF;
+        transition: .3s;
+    }
+
+    #footer a:hover {
+        color: #2997EE;
+        transition: .3s;
     }
     
     #footerContent {
