--- a/css/about.css
+++ b/css/about.css
@@ -486,7 +486,7 @@
     .aboutPlusesBlockLogo {
         width: 50px;
         height: 50px;
-        background-color: #C4C4C4;
+        /* background-color: #C4C4C4; */
     }
     
     .aboutPlusesBlockMain {
