--- a/css/carPage.css
+++ b/css/carPage.css
@@ -240,13 +240,47 @@
 .carDescriptionMainBlockImg {
     width: 60px;
     height: 60px;
-    background: #D9D9D9;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* background: #D9D9D9; */
+}
+
+.carDescriptionMainBlockImg img {
+    width: 45px;
+    height: auto;
+    filter: drop-shadow(0px 15px 20px rgba(8, 24, 81, 0.3));
+}
+
+.carIconBlock .carDescriptionMainBlockImg img.carIcon {
+    margin-left: 5px;
+}
+
+.carDescriptionMainBlockImg img.carIcon {
+    width: 45px;
+}
+
+.carDescriptionMainBlockImg .powerIcon {
+    width: 26px;
+}
+
+.carDescriptionMainBlockImg .tooBigIcon {
+    width: 37px;
+}
+
+.carDescriptionMainBlockImg .carIcon {
+    width: 55px;
+}
+
+.carDescriptionMainBlockImg .biggestIcon {
+    width: 40px;
 }
 
 .carDescriptionMainBlockDesc {
     position: absolute;
     top: 10px;
-    left: 78px;
+    left: 65px;
     width: 135px;
     font-style: normal;
     font-weight: 300;
@@ -265,7 +299,7 @@
 .carDescriptionMainBlockMain {
     position: absolute;
     top: 30px;
-    left: 78px;
+    left: 65px;
     width: 135px;
     font-style: normal;
     font-weight: normal;
@@ -821,7 +855,11 @@ h4 {
     .carDescriptionMainBlockImg {
         width: 40px;
         height: 40px;
-        background: #D9D9D9;
+        /* background: #D9D9D9; */
+    }
+
+    .carDescriptionMainBlockImg img {
+        width: 40px;
     }
 
     .carDescriptionMainBlockDesc {
