--- a/css/all.css
+++ b/css/all.css
@@ -1617,7 +1617,7 @@ h3 {
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
-    line-height: 20px;
+    /* line-height: 20px; */
     /* identical to box height */
 
     letter-spacing: 0.02em;
@@ -1625,9 +1625,9 @@ h3 {
     border: none;
     background: none;
     width: 220px;
-    height: 20px;
+    /* height: 20px; */
     position: absolute;
-    bottom: 10px;
+    bottom: 6px;
     left: 24px;
 
     color: #14142B;
