--- a/css/all.css
+++ b/css/all.css
@@ -1617,7 +1617,7 @@ h3 {
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
-    /* line-height: 20px; */
+    line-height: 20px;
     /* identical to box height */
 
     letter-spacing: 0.02em;
